<resources>
    <string name="app_name">GPSUpdateServices</string>
    <string name="id">Id:</string>
    <string name="postman_id">Postman id:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="created_at">Created at:</string>
    <string name="updated_at">Updated at:</string>
    <string name="enter_ip_address">Enter ip address...</string>
    <string name="connected_to">Connected to:</string>
    <string name="submit">Submit</string>
    <string name="ip_port_test">192.168.1.7:50411</string>
</resources>